# Spectra

./: .gitignore  SPECTRA_Build_Plan.docx  pyproject.toml  requirements.txt
evaluation/: false_activation.py  latency_profile.py
models/: gesture_cnn.pt  training_log.json
scripts/: extract_hagrid_landmarks.py
src/spectra/: main.py  schema.py
src/spectra/capture/: webcam.py
src/spectra/document/: annotation.py  code_detect.py  engine.py  highlight.py  word_box.py
src/spectra/inference/gesture/: classifier.py  landmarks.py  pipeline.py  rule_based.py  state_machine.py
src/spectra/ui/: hud.py  pdf_widget.py  window.py
tests/: test_document_engine.py  test_gesture_ml.py  test_gesture_rules.py  test_schema.py
tools/: generate_synthetic_data.py  record_landmarks.py  train_classifier.py
